Make separate target for build script

--- a/.github/workflows/tii-sel4-release.yml
+++ b/.github/workflows/tii-sel4-release.yml
@@ -57,7 +57,7 @@ jobs:
           working-directory: ./workspace
           run: |
             sudo chown -R $USER.$USER ../workspace
-            DIR="\"\"" CONTAINER_COMMANDS="/workspace/scripts/bitbake.sh" make shell
+            make linux-image
         - name: Copy kernel in place for seL4 builds
           working-directory: ./workspace
           run: |
