--- a/.github/workflows/tii-sel4-release.yml
+++ b/.github/workflows/tii-sel4-release.yml
@@ -35,7 +35,7 @@ jobs:
       steps:
         - name: Prepare workspace
           run: |
-           rm -rf *
+           sudo rm -rf *
            echo "TII_SEL4_RELEASE=tii_sel4_${{inputs.tii-sel4-version}}" >> $GITHUB_ENV
         - name: Checkout code for using local actions
           uses: actions/checkout@v2
@@ -56,7 +56,6 @@ jobs:
         - name: Build root file systems and kernel images
           working-directory: ./workspace
           run: |
-            sudo chown -R $USER.$USER ../workspace
             make linux-image
         - name: Copy kernel in place for seL4 builds
           working-directory: ./workspace
