--- a/.github/workflows/tii-sel4-release.yml
+++ b/.github/workflows/tii-sel4-release.yml
@@ -56,6 +56,7 @@ jobs:
         - name: Build root file systems and kernel images
           working-directory: ./workspace
           run: |
+            sudo chown -R $USER:$USER ../workspace
             make linux-image
         - name: Copy kernel in place for seL4 builds
           working-directory: ./workspace
