--- a/.github/workflows/pr-verifier-2.yml
+++ b/.github/workflows/pr-verifier-2.yml
@@ -33,6 +33,6 @@ jobs:
           # JFrog Platform access token
           JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
       - run: |
-          jf c add --url "$JF_URL" --access-token "$JF_ACCESS_TOKEN"
+          jf c add --url "$JF_URL" --access-token "$JF_ACCESS_TOKEN" --interactive=false
           jf rt ping
           jf rt u tii_sel4_manifest tii-sel4-manifest
