--- a/.github/workflows/pr-verifier-2.yml
+++ b/.github/workflows/pr-verifier-2.yml
@@ -28,11 +28,13 @@ jobs:
       - name: Displaying
         run: cat tii_sel4_manifest/external.xml
       - uses: jfrog/setup-jfrog-cli@v2
+      - name: Publish
+        shell: bash 
         env:
           JF_URL: ${{ secrets.JF_URL }}
           # JFrog Platform access token
           JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
-      - run: |
+        run: |
           jf c add --url "$JF_URL" --access-token "$JF_ACCESS_TOKEN" --interactive=false
           jf rt ping
           jf rt u tii_sel4_manifest tii-sel4-manifest
