--- a/.github/workflows/pr-verifier-2.yml
+++ b/.github/workflows/pr-verifier-2.yml
@@ -8,7 +8,7 @@ on:
         type: string
 jobs:
   Open-pr-verificaton:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code for using local actions
         uses: actions/checkout@v3
@@ -38,11 +38,24 @@ jobs:
 
 
 
-      - name: Publish images to artifactory
-        uses: amalx-ssrc/tii_sel4_build_test/.github/actions/artifact-publish@tii/development-test
-        with:
-          rt-user: ${{ secrets.RT_USER }}
-          rt-api-key: ${{ secrets.RT_API_KEY }}
-          rt-url: ${{ secrets.RT_URL}}
-          input-paths:  |
-            tii_sel4_manifest:tii-sel4-manifest
+      # - name: Publish images to artifactory
+      #   uses: amalx-ssrc/tii_sel4_build_test/.github/actions/artifact-publish@tii/development-test
+      #   with:
+      #     rt-user: ${{ secrets.RT_USER }}
+      #     rt-api-key: ${{ secrets.RT_API_KEY }}
+      #     rt-url: ${{ secrets.RT_URL}}
+      #     input-paths:  |
+      #       tii_sel4_manifest:tii-sel4-manifest
+
+
+      - name: installing jf 
+        run: |
+          wget -qO - https://releases.jfrog.io/artifactory/jfrog-gpg-public/jfrog_public_gpg.key | sudo apt-key add -
+          echo "deb https://releases.jfrog.io/artifactory/jfrog-debs xenial contrib" | sudo tee -a /etc/apt/sources.list
+          sudo apt update
+          sudo apt install -y jfrog-cli-v2-jf
+
+          echo uploading artifactory
+          jf c add --url "$RT_URL" --user "$RT_USER" --password "$RT_API_KEY" --interactive=false
+          jf rt u tii_sel4_manifest/ tii-sel4-manifest
+
