--- a/.github/workflows/pr-verifier-2.yml
+++ b/.github/workflows/pr-verifier-2.yml
@@ -8,7 +8,7 @@ on:
         type: string
 jobs:
   Open-pr-verificaton:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout code for using local actions
         uses: actions/checkout@v3
