--- a/.github/workflows/pr-verifier-2.yml
+++ b/.github/workflows/pr-verifier-2.yml
@@ -8,7 +8,7 @@ on:
         type: string
 jobs:
   Open-pr-verificaton:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code for using local actions
         uses: actions/checkout@v3
@@ -49,6 +49,10 @@ jobs:
 
 
       - name: installing jf 
+        env: 
+            RT_USER: ${{ secrets.RT_USER }}
+            RT_API_KEY: ${{ secrets.RT_API_KEY }}
+            RT_URL: ${{ secrets.RT_URL }}
         run: |
           wget -qO - https://releases.jfrog.io/artifactory/jfrog-gpg-public/jfrog_public_gpg.key | sudo apt-key add -
           echo "deb https://releases.jfrog.io/artifactory/jfrog-debs xenial contrib" | sudo tee -a /etc/apt/sources.list
@@ -56,6 +60,6 @@ jobs:
           sudo apt install -y jfrog-cli-v2-jf
 
           echo uploading artifactory
-          jf c add --url https://artifactory.ssrcdevops.tii.ae:443 --user amal45 --password AKCp8kr16GhixaZdAwvdj5cdtX4moWGuXCCdgEM8zMhbKt9r4YT8QQsKSgtdX5hgQqqwp3zNw --interactive=false
+          jf c add --url "$RT_URL" --user "$RT_USER" --password "$RT_API_KEY" --interactive=false
           jf rt u tii_sel4_manifest/ tii-sel4-manifest
 
