--- a/.github/workflows/build-vm-images.yml
+++ b/.github/workflows/build-vm-images.yml
@@ -7,7 +7,7 @@ on:
     inputs:
       manifest-url:
         description: 'Manifest repository'
-        default: 'git@github.com:tiiuae/tii_sel4_manifest.git'
+        default: 'https://github.com/amalx-ssrc/tii_sel4_manifest.git'
         required: false
         type: string
       manifest-revision:
