--- a/.github/workflows/repo-manifest-checkout.yml
+++ b/.github/workflows/repo-manifest-checkout.yml
@@ -10,7 +10,7 @@ on:
         type: string
       manifest-revision:
         description: 'Manifest revision'
-        default: 'tii/development'
+        default: 'tii/development-testing'
         required: false
         type: string
       manifest-file:
