--- a/.github/workflows/repo-manifest-checkout.yml
+++ b/.github/workflows/repo-manifest-checkout.yml
@@ -5,12 +5,12 @@ on:
     inputs:
       manifest-url:
         description: 'Manifest repository'
-        default: 'https://github.com/amalx-ssrc/tii_sel4_manifest.git'
+        default: 'git@github.com:amalx-ssrc/tii_sel4_manifest.git'
         required: false
         type: string
       manifest-revision:
         description: 'Manifest revision'
-        default: 'tii/development-testing'
+        default: 'release/tii_sel4_1.1.0-rc1'
         required: false
         type: string
       manifest-file:
