--- a/.github/workflows/build-vmimages.yml
+++ b/.github/workflows/build-vmimages.yml
@@ -2,6 +2,12 @@ name: Build vm images
 
 on:
  workflow_call:
+    inputs:
+      platform:
+        description: 'Platform config'
+        default: 'rpi4_defconfig'
+        required: false
+        type: string    
     secrets:
       ssh-key:
         description: 'ssh key for checking out source code'
