--- a/.github/workflows/repo-manifest-checkout.yml
+++ b/.github/workflows/repo-manifest-checkout.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       manifest-url:
         description: 'Manifest repository'
-        default: 'git@github.com:amalx-ssrc/tii_sel4_manifest.git'
+        default: 'https://github.com/amalx-ssrc/tii_sel4_build_test'
         required: false
         type: string
       manifest-revision:
@@ -27,7 +27,7 @@ on:
       ssh-key:
         description: 'ssh key for checking out source code'
         required: true
-        
+
 jobs:
   build_images:
     runs-on: ubuntu-latest
