--- a/.github/workflows/repo-manifest-checkout.yml
+++ b/.github/workflows/repo-manifest-checkout.yml
@@ -5,8 +5,7 @@ on:
     inputs:
       manifest-url:
         description: 'Manifest repository'
-        default: 'https://github.com/amalx-ssrc/tii_sel4_manifest'
-        required: false
+        default: 'git@github.com:amalx-ssrc/tii_sel4_manifest.git'
         type: string
       manifest-revision:
         description: 'Manifest revision'
