ssh changed to http

--- a/.github/workflows/build-vm-images.yml
+++ b/.github/workflows/build-vm-images.yml
@@ -7,7 +7,7 @@ on:
     inputs:
       manifest-url:
         description: 'Manifest repository'
-        default: 'git@github.com:amalx-ssrc/tii_sel4_manifest.git'
+        default: 'https://github.com/amalx-ssrc/tii_sel4_manifest.git'
         required: false
         type: string
       manifest-revision:
@@ -48,7 +48,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: amalx-ssrc/tii_sel4_build_test
-          
+
       - name: Checkout code
         id: checkout
         uses: ./.github/actions/repo-manifest-checkout
