--- a/.github/workflows/build-vm-images.yml
+++ b/.github/workflows/build-vm-images.yml
@@ -52,7 +52,9 @@ on:
 
 jobs:
   build_images:
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
+    runs-on: self-hosted
+
     steps:
       - name: Checkout code for using local actions
         uses: actions/checkout@v2
