--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -18,7 +18,7 @@ jobs:
   build-vm-images:
     uses: ./.github/workflows/build-vm-images.yml
     with:
-      # repo-override: ${{ inputs.REPO_OVERRIDE }}
+      repo-override: ${{ inputs.REPO_OVERRIDE }}
       branch-override: ${{ inputs.BRANCH_OVERRIDE }}
     secrets:
       ssh-key: ${{ secrets.CI_SSH_KEY }}
