repo name testing

--- a/.github/workflows/build-vm-images-2.yml
+++ b/.github/workflows/build-vm-images-2.yml
@@ -116,7 +116,7 @@ jobs:
           WORKSPACE: './workspace'
 
       - name: Publish images to artifactory
-        if: github.repository == 'tii_sel4_build_test'
+        if:  ${{ github.repository }} == 'amalx-ssrc/tii_sel4_build_test'
         uses: ./.github/actions/artifact-publish
         with:
           rt-user: ${{ secrets.rt-user }}
